--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1 style = "text-align:center;">On the Subject of Bees</h1>
-        <img src = "https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwi8s9CZxevgAhUK44MKHUNKBOMQjRx6BAgBEAU&url=http%3A%2F%2Fpluspng.com%2Fbee-free-png-8622.html&psig=AOvVaw2eRtPew-sZvNZsrTUvxcPY&ust=1551893767265091" width="115" height="100">
+        <img src = "http://pluspng.com/img-png/bee-free-png-cartoon-bee-png-800.png" width="315" height="300">
      <p>You can run but you can't hide.</p>
     </body>
  </html>
