--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1 style = "text-align:center;">On the Subject of Bees</h1>
-        <img src = "http://pluspng.com/img-png/bee-free-png-cartoon-bee-png-800.png" style="float:center;" width="315" height="300">
+        <img src = "http://pluspng.com/img-png/bee-free-png-cartoon-bee-png-800.png" style="width:100%">
      <p>You can run but you can't hide.</p>
     </body>
  </html>
