--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <title>Test123</title>
     </head>
-    <body>
+    <body background = "https://cdn4.vectorstock.com/i/1000x1000/68/63/monochrome-silhouette-with-biohazard-symbol-vector-12076863.jpg">
         <h1 style = "text-align:center;">On the Subject of Bees</h1>
         <img src = "http://pluspng.com/img-png/bee-free-png-cartoon-bee-png-800.png" style="width:100%">
      <p>You can run but you can't hide.</p>
